--- a/app/src/main/res/layout/fragment_news_feed_roster.xml
+++ b/app/src/main/res/layout/fragment_news_feed_roster.xml
@@ -47,15 +47,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnRetry2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="6dp"
-        android:text="@string/text_retry"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/btnRetry2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="6dp"-->
+<!--        android:text="@string/text_retry"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -80,8 +80,8 @@
             android:layout_weight="1"
             android:maxLines="3"
             android:minLines="1"
-            android:text="asd"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            tools:text="asd" />
 
         <Button
             android:id="@+id/btn_retry"
@@ -90,8 +90,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:text="Retry"
-            tools:text="Retry" />
+            android:text="@string/retry"
+            tools:text="@string/retry" />
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
