--- a/app/src/main/res/layout/fragment_news_feed_roster.xml
+++ b/app/src/main/res/layout/fragment_news_feed_roster.xml
@@ -24,18 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvErrorMessage"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textColor="@color/colorPrimaryDark"-->
-<!--        android:textSize="14sp"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:text="Timeout" />-->
-
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
@@ -63,7 +51,7 @@
         android:id="@+id/bottom_sheet_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/f"
+        android:background="@drawable/bottom_sheet_corner"
         android:orientation="horizontal"
         android:padding="8dp"
         app:behavior_hideable="true"
