--- a/app/src/main/res/menu/actions.xml
+++ b/app/src/main/res/menu/actions.xml
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/load"
-        android:icon="@drawable/ic_load"
-        android:title="@string/load"
-        app:showAsAction="ifRoom|withText" >
-        <menu>
-            <item
-                android:id="@+id/editor_find"
-                android:icon="@drawable/ic_load"
-                android:title="string/search" />
-            <item
-                android:id="@+id/editor_encoding"
-                android:icon="@drawable/ic_load"
-                android:title="string/encoding" >
+        android:id="@+id/developer_options"
+        android:icon="@drawable/ic_developer_options"
+        android:title="@string/developer_options"
+        app:showAsAction="never">
 
-                <menu>
-                    <item
-                        android:id="@+id/e2ditor_find"
-                        android:icon="@drawable/ic_load"
-                        android:title="string/search" />
-                </menu>
-            </item>
-        </menu>
+            <menu>
+                <item
+                    android:id="@+id/load"
+                    android:icon="@drawable/ic_load"
+                    android:title="@string/load"
+                    app:showAsAction="ifRoom|withText" />
+            </menu>
+
     </item>
-
 
 </menu>
